@@ -32,7 +32,6 @@ KChartParams::KChartParams()
 {
     m_dcop = 0;
     //dcopObject(); // build it
-    setDrawSolidExcessArrows(true);
 }
 
 
